[gd_scene load_steps=35 format=3 uid="uid://mtu0mxcjwc41"]

[ext_resource type="Script" path="res://scenes/color-options/ColorSliders.gd" id="1_ryk5y"]
[ext_resource type="Texture2D" uid="uid://vceyw8jntod2" path="res://assets/gui/panels.png" id="2_ifvt5"]
[ext_resource type="Texture2D" uid="uid://c0ikmcsba2msv" path="res://assets/gui/playground_buttons.png" id="3_ihvhm"]
[ext_resource type="PackedScene" uid="uid://duebklrl317w2" path="res://scenes/general/SwitchButton.tscn" id="4_2fov5"]
[ext_resource type="Texture2D" uid="uid://ci2mpewrmv3rv" path="res://assets/gui/close_button.png" id="4_eexud"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bj178"]
atlas = ExtResource("2_ifvt5")
region = Rect2(18, 2, 12, 12)

[sub_resource type="Gradient" id="Gradient_xjnaf"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xe8bl"]
gradient = SubResource("Gradient_xjnaf")
width = 1

[sub_resource type="Gradient" id="Gradient_qvcnl"]
resource_local_to_scene = true
colors = PackedColorArray(0, 0, 0, 1, 0.0078125, 0, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_e2yrv"]
resource_local_to_scene = true
gradient = SubResource("Gradient_qvcnl")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kopvc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mvmrp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_atda5"]

[sub_resource type="Gradient" id="Gradient_uk8i4"]
resource_local_to_scene = true
colors = PackedColorArray(1, 1, 1, 1, 0.0078125, 0, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1bh3c"]
resource_local_to_scene = true
gradient = SubResource("Gradient_uk8i4")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2ro3f"]
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kyfgn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1wk3s"]

[sub_resource type="Gradient" id="Gradient_15o5r"]
offsets = PackedFloat32Array(0, 0.167, 0.333, 0.5, 0.667, 0.833, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_koc1a"]
gradient = SubResource("Gradient_15o5r")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_namad"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4t1bo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_721e2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3lbcc"]
resource_local_to_scene = true
atlas = ExtResource("3_ihvhm")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfpw0"]
resource_local_to_scene = true
atlas = ExtResource("3_ihvhm")
region = Rect2(0, 256, 32, 32)

[sub_resource type="InputEventKey" id="InputEventKey_6slxs"]
device = -1
keycode = 65
unicode = 97

[sub_resource type="InputEventKey" id="InputEventKey_06eut"]
device = -1
keycode = 43
unicode = 43

[sub_resource type="Shortcut" id="Shortcut_e31gr"]
events = [SubResource("InputEventKey_6slxs"), SubResource("InputEventKey_06eut")]

[sub_resource type="AtlasTexture" id="AtlasTexture_pcoqw"]
atlas = ExtResource("3_ihvhm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcil7"]
atlas = ExtResource("3_ihvhm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkpn8"]
atlas = ExtResource("3_ihvhm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_75bkv"]
atlas = ExtResource("4_eexud")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kltj"]
atlas = ExtResource("4_eexud")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrmm1"]
atlas = ExtResource("4_eexud")
region = Rect2(32, 0, 32, 32)

[node name="ColorSliders" type="MarginContainer"]
offset_right = 422.0
offset_bottom = 120.0
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_ryk5y")

[node name="Dialogue" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="Background" type="NinePatchRect" parent="Dialogue"]
layout_mode = 2
texture = SubResource("AtlasTexture_bj178")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Content" type="MarginContainer" parent="Dialogue"]
layout_mode = 2

[node name="Lines" type="VBoxContainer" parent="Dialogue/Content"]
layout_mode = 2

[node name="Columns" type="HBoxContainer" parent="Dialogue/Content/Lines"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Frame" type="TextureRect" parent="Dialogue/Content/Lines/Columns"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "preview of selected color"
texture = SubResource("GradientTexture1D_xe8bl")

[node name="MarginContainer" type="MarginContainer" parent="Dialogue/Content/Lines/Columns/Frame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Preview" type="TextureRect" parent="Dialogue/Content/Lines/Columns/Frame/MarginContainer"]
modulate = Color(0, 0, 1, 1)
layout_mode = 2
tooltip_text = "preview of selected color"
texture = SubResource("GradientTexture1D_xe8bl")

[node name="Sliders" type="VBoxContainer" parent="Dialogue/Content/Lines/Columns"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="Value" type="MarginContainer" parent="Dialogue/Content/Lines/Columns/Sliders"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Texture" type="TextureRect" parent="Dialogue/Content/Lines/Columns/Sliders/Value"]
layout_mode = 2
texture = SubResource("GradientTexture1D_e2yrv")

[node name="Slider" type="HSlider" parent="Dialogue/Content/Lines/Columns/Sliders/Value"]
layout_mode = 2
tooltip_text = "brightness"
theme_override_styles/slider = SubResource("StyleBoxEmpty_kopvc")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_mvmrp")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_atda5")
value = 100.0

[node name="Saturation" type="MarginContainer" parent="Dialogue/Content/Lines/Columns/Sliders"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Texture" type="TextureRect" parent="Dialogue/Content/Lines/Columns/Sliders/Saturation"]
layout_mode = 2
texture = SubResource("GradientTexture1D_1bh3c")

[node name="Slider" type="HSlider" parent="Dialogue/Content/Lines/Columns/Sliders/Saturation"]
layout_mode = 2
tooltip_text = "saturation or intensity of the color"
theme_override_styles/slider = SubResource("StyleBoxTexture_2ro3f")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_kyfgn")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_1wk3s")
value = 100.0

[node name="Hue" type="MarginContainer" parent="Dialogue/Content/Lines/Columns/Sliders"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Texture" type="TextureRect" parent="Dialogue/Content/Lines/Columns/Sliders/Hue"]
layout_mode = 2
texture = SubResource("GradientTexture1D_koc1a")

[node name="Slider" type="HSlider" parent="Dialogue/Content/Lines/Columns/Sliders/Hue"]
layout_mode = 2
tooltip_text = "hue (\"color tone\") of selected color"
theme_override_styles/slider = SubResource("StyleBoxEmpty_namad")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_4t1bo")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_721e2")
max_value = 256.0
value = 171.0

[node name="Presets" type="HBoxContainer" parent="Dialogue/Content/Lines/Columns/Sliders"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="Set1" type="TextureButton" parent="Dialogue/Content/Lines/Columns/Sliders/Presets"]
modulate = Color(0.980392, 0.952941, 0.831373, 1)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "preset color"
texture_normal = SubResource("GradientTexture1D_xe8bl")
texture_pressed = SubResource("GradientTexture1D_xe8bl")
texture_hover = SubResource("GradientTexture1D_xe8bl")
stretch_mode = 0

[node name="Set2" type="TextureButton" parent="Dialogue/Content/Lines/Columns/Sliders/Presets"]
modulate = Color(0.901961, 0.784314, 0.32549, 1)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "preset color"
texture_normal = SubResource("GradientTexture1D_xe8bl")
texture_pressed = SubResource("GradientTexture1D_xe8bl")
texture_hover = SubResource("GradientTexture1D_xe8bl")
stretch_mode = 0

[node name="Set3" type="TextureButton" parent="Dialogue/Content/Lines/Columns/Sliders/Presets"]
modulate = Color(0.878431, 0, 0.247059, 1)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "preset color"
texture_normal = SubResource("GradientTexture1D_xe8bl")
texture_pressed = SubResource("GradientTexture1D_xe8bl")
texture_hover = SubResource("GradientTexture1D_xe8bl")
stretch_mode = 0

[node name="Set4" type="TextureButton" parent="Dialogue/Content/Lines/Columns/Sliders/Presets"]
modulate = Color(0, 0.482353, 0.870588, 1)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "preset color"
texture_normal = SubResource("GradientTexture1D_xe8bl")
texture_pressed = SubResource("GradientTexture1D_xe8bl")
texture_hover = SubResource("GradientTexture1D_xe8bl")
stretch_mode = 0

[node name="Set5" type="TextureButton" parent="Dialogue/Content/Lines/Columns/Sliders/Presets"]
modulate = Color(0.156863, 0.141176, 0.270588, 1)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "preset color"
texture_normal = SubResource("GradientTexture1D_xe8bl")
texture_pressed = SubResource("GradientTexture1D_xe8bl")
texture_hover = SubResource("GradientTexture1D_xe8bl")
stretch_mode = 0

[node name="Set6" type="TextureButton" parent="Dialogue/Content/Lines/Columns/Sliders/Presets"]
modulate = Color(0.164706, 0.45098, 0.211765, 1)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "preset color"
texture_normal = SubResource("GradientTexture1D_xe8bl")
texture_pressed = SubResource("GradientTexture1D_xe8bl")
texture_hover = SubResource("GradientTexture1D_xe8bl")
stretch_mode = 0

[node name="Hashtag" type="Label" parent="Dialogue/Content/Lines/Columns/Sliders/Presets"]
layout_mode = 2
size_flags_vertical = 1
text = "#"
vertical_alignment = 1

[node name="Hash" type="LineEdit" parent="Dialogue/Content/Lines/Columns/Sliders/Presets"]
custom_minimum_size = Vector2(94, 28)
layout_mode = 2
size_flags_stretch_ratio = 4.0
tooltip_text = "enter html-color-code here"
placeholder_text = "0000ff"
max_length = 6
caret_blink = true

[node name="Buttons" type="VBoxContainer" parent="Dialogue/Content/Lines/Columns"]
layout_mode = 2

[node name="UniformButton" parent="Dialogue/Content/Lines/Columns/Buttons" instance=ExtResource("4_2fov5")]
layout_mode = 2
tooltip_ = "change color algorithm"
tooltip_ger = "ändere Farbgebung"
tex_on = SubResource("AtlasTexture_3lbcc")
tex_off = SubResource("AtlasTexture_cfpw0")

[node name="LastLine" type="HBoxContainer" parent="Dialogue/Content/Lines"]
layout_mode = 2

[node name="AddButton" type="TextureButton" parent="Dialogue/Content/Lines/LastLine"]
visibility_layer = 2
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
tooltip_text = "add current color to presets"
shortcut = SubResource("Shortcut_e31gr")
texture_normal = SubResource("AtlasTexture_pcoqw")
texture_pressed = SubResource("AtlasTexture_gcil7")
texture_hover = SubResource("AtlasTexture_rkpn8")

[node name="UserPresets" type="HBoxContainer" parent="Dialogue/Content/Lines/LastLine"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="UserPresetsLabel" type="Label" parent="Dialogue/Content/Lines/LastLine/UserPresets"]
layout_mode = 2
text = "Presets:"

[node name="Set1" type="TextureButton" parent="Dialogue/Content/Lines/LastLine/UserPresets"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "colors you saved
(max. 8)"
texture_normal = SubResource("GradientTexture1D_xe8bl")
texture_pressed = SubResource("GradientTexture1D_xe8bl")
texture_hover = SubResource("GradientTexture1D_xe8bl")
stretch_mode = 0

[node name="Set2" type="TextureButton" parent="Dialogue/Content/Lines/LastLine/UserPresets"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "colors you saved
(max. 8)"
texture_normal = SubResource("GradientTexture1D_xe8bl")
texture_pressed = SubResource("GradientTexture1D_xe8bl")
texture_hover = SubResource("GradientTexture1D_xe8bl")
stretch_mode = 0

[node name="Set3" type="TextureButton" parent="Dialogue/Content/Lines/LastLine/UserPresets"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "colors you saved
(max. 8)"
texture_normal = SubResource("GradientTexture1D_xe8bl")
texture_pressed = SubResource("GradientTexture1D_xe8bl")
texture_hover = SubResource("GradientTexture1D_xe8bl")
stretch_mode = 0

[node name="Set4" type="TextureButton" parent="Dialogue/Content/Lines/LastLine/UserPresets"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "colors you saved
(max. 8)"
texture_normal = SubResource("GradientTexture1D_xe8bl")
texture_pressed = SubResource("GradientTexture1D_xe8bl")
texture_hover = SubResource("GradientTexture1D_xe8bl")
stretch_mode = 0

[node name="Set5" type="TextureButton" parent="Dialogue/Content/Lines/LastLine/UserPresets"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "colors you saved
(max. 8)"
texture_normal = SubResource("GradientTexture1D_xe8bl")
texture_pressed = SubResource("GradientTexture1D_xe8bl")
texture_hover = SubResource("GradientTexture1D_xe8bl")
stretch_mode = 0

[node name="Set6" type="TextureButton" parent="Dialogue/Content/Lines/LastLine/UserPresets"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "colors you saved
(max. 8)"
texture_normal = SubResource("GradientTexture1D_xe8bl")
texture_pressed = SubResource("GradientTexture1D_xe8bl")
texture_hover = SubResource("GradientTexture1D_xe8bl")
stretch_mode = 0

[node name="Set7" type="TextureButton" parent="Dialogue/Content/Lines/LastLine/UserPresets"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "colors you saved
(max. 8)"
texture_normal = SubResource("GradientTexture1D_xe8bl")
texture_pressed = SubResource("GradientTexture1D_xe8bl")
texture_hover = SubResource("GradientTexture1D_xe8bl")
stretch_mode = 0

[node name="Set8" type="TextureButton" parent="Dialogue/Content/Lines/LastLine/UserPresets"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "colors you saved
(max. 8)"
texture_normal = SubResource("GradientTexture1D_xe8bl")
texture_pressed = SubResource("GradientTexture1D_xe8bl")
texture_hover = SubResource("GradientTexture1D_xe8bl")
stretch_mode = 0

[node name="CloseButton" type="TextureButton" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
tooltip_text = "reset and close"
texture_normal = SubResource("AtlasTexture_75bkv")
texture_pressed = SubResource("AtlasTexture_8kltj")
texture_hover = SubResource("AtlasTexture_lrmm1")

[connection signal="value_changed" from="Dialogue/Content/Lines/Columns/Sliders/Value/Slider" to="." method="_on_slider_value_changed"]
[connection signal="value_changed" from="Dialogue/Content/Lines/Columns/Sliders/Saturation/Slider" to="." method="_on_slider_value_changed"]
[connection signal="value_changed" from="Dialogue/Content/Lines/Columns/Sliders/Hue/Slider" to="." method="_on_slider_value_changed"]
[connection signal="focus_exited" from="Dialogue/Content/Lines/Columns/Sliders/Presets/Hash" to="." method="_on_hash_focus_exited"]
[connection signal="text_submitted" from="Dialogue/Content/Lines/Columns/Sliders/Presets/Hash" to="." method="_on_hash_text_submitted"]
[connection signal="pressed" from="Dialogue/Content/Lines/Columns/Buttons/UniformButton" to="." method="_on_uniform_button_pressed"]
[connection signal="pressed" from="Dialogue/Content/Lines/LastLine/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
